Bug fix - Timer overflow on mobile

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 h3 {
-  font-size: 8rem;
+  font-size: 24vmin;
   overflow-y: hidden;
 }
 
